# discriminant

./: Cargo.toml  README.md  lib.rs
macro/: Cargo.toml  lib.rs
tests/: test.rs
